--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,331 @@
-/* место для вашего кода */
+.body {
+    margin: 0;
+}
+
+.header {
+    width: 1100px;
+    height: 293px;
+    display: grid;
+    grid-template-columns: 1fr min-content 1fr;
+    align-items: center;
+
+}
+
+.header__links-list {
+    list-style-type: circle;
+    display: flex;
+    gap: 25px;
+    width: 391.48px;
+    height: 21.5px;
+}
+
+.header__logo-image {
+    display: block;
+    width: 105px;
+    height: 148px;
+}
+
+.header__links-list-item_no-bullit {
+    list-style-type: none;
+}
+
+.header__menu {
+    margin-left: 50px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 13px;
+    box-sizing: border-box;
+    border: 1px solid rgb(255, 255, 255);
+}
+
+.header__logo-image {
+    display: block;
+}
+
+.address {
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    margin: 95px 50px 100px;
+    display: flex;
+    flex-direction: column;
+    justify-self:end;
+    max-width: 240px;
+    height: 98px;
+}
+
+.cover { 
+    position: relative;
+    background-image: url(../images/cover.jpg);
+    background-repeat: no-repeat;
+    background-size: auto 100%;
+    min-height: 757px;
+    z-index: 1;
+}
+
+.overlay {
+    position: absolute;
+    background-color: rgba(0, 0, 0, 1);
+    opacity: 0.6;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+.cover__title {
+    z-index: 1;
+    padding: 165px 50px 207px 50px;
+    width: 100%;
+    color: rgba(255, 255, 255, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 100px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 30px;
+}
+
+.aligned-text_left {
+    display: block;
+    text-align: start; 
+}
+
+.aligned-text_center {
+    display: block;
+    text-align: center;
+}
+
+.aligned-text_right {
+    display: block;
+    text-align: end;
+}
+
+.cover__description {
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    align-items:center;
+    color: rgba(255, 255, 255, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    text-transform: uppercase;
+    padding: 0px 50px 50px;
+}
+
+.cover__description-text {
+    word-spacing: 20px;
+}
+
+.bet-button {
+    text-transform: uppercase;
+    width: 256px;
+    height: 51px;
+    border: 1px solid rgba(255, 255, 255, 1);
+    background-color: transparent;
+    color: rgba(255, 255, 255, 1);
+    font-family: Raleway, sans-serif;
+}
+
+.lots {
+    display: flex;
+    flex-wrap: wrap;
+    width: 1052px;
+    min-height: 723px;
+    margin: 180px 24px 120px 24px;
+}
+
+.lots__heading {
+    color: rgba(0, 0, 0, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    text-transform: uppercase;
+    padding-left: 40px;
+}
+
+.lots__card-list {
+    display: flex;
+    gap: 25px;
+    list-style-type: none;
+}
+
+.card {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 334px;
+    height: 596px
+}
+
+.card__title {
+    color: rgba(255, 255, 255, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 22px;
+    font-weight: 700;
+    line-height: 26px;
+    letter-spacing: 0%;
+    text-align: left;
+    text-decoration-line: underline;
+    text-transform: uppercase;
+    margin: 48px 40px 0px;
+}
+
+.card__text {
+    display: block;
+    color: rgba(255, 255, 255, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 120%;
+    letter-spacing: 0%;
+    text-decoration: none;
+    margin: auto 40px 48px;
+}
+
+.card-link {
+    height: 100%;
+    text-decoration: none;
+}
+
+.lots__card-list-item-cinema {
+    width: 334px;
+    height: 596px;
+    background-image: url(../images/card-lot-01.jpg);
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+}
+
+.lots__card-list-item-book {
+    width: 334px;
+    height: 596px;
+    background-image: url(../images/card-lot-02.jpg);
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+}
+
+.lots__card-list-item_art {
+    width: 334px;
+    height: 596px;
+    background-image: url(../images/card-lot-03.jpg);
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
+}
+
+.lots__look-more-link {
+
+    height: 25px;
+    padding-left: 40px;
+
+}
+
+.about {
+    display: grid;
+    grid-template-columns: 334px 1fr;
+    gap: 25px;
+    width: 1052px;
+    height: 595px;
+    margin: 120px 24px 180px 24px;
+}
+
+.column {
+    display: flex;
+    flex-direction: column;
+}
+
+.about__logo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 240px;
+    height: 240px;
+    background: rgba(0, 0, 0, 1);
+    border-radius: 50%;
+    margin: 0 auto  ;
+}
+
+.about__logo-image {
+    width: 148px;
+    height: 114px;
+}
+
+.about__title {
+    color: rgba(0, 0, 0, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 40px;
+    font-weight: 700;
+    line-height: 100%;
+    letter-spacing: 0%;
+    text-align: left;
+    text-transform: uppercase;
+    margin: 100px 0px 100px 0px;
+}
+
+.about__text {
+    color: rgba(0, 0, 0, 1);
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0%;
+    text-align: left;
+    display: flex;
+    flex-direction: column;
+    gap: 24px;
+}
+
+.footer {
+    width: 1100px;
+    height: 180px;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 160px;
+    padding-left: 50px;
+    padding-right: 50px;
+}
+
+.address__footer {
+    width: 265px;
+    height: 98px;
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    font-style: normal;
+    display: flex;
+    flex-direction: column;
+    justify-self:start;
+}
+
+.footer__menu-list {
+    width: 164x;
+    height: 64px;
+}
+
+.footer__menu-list-item {
+    font-family: Raleway, sans-serif;
+    font-size: 18px;
+    text-align: center;
+    list-style-type: none;
+}
+
+.footer__menu-link_active {
+    text-decoration: none;
+}
+
+.footer__social-list {
+    width: 240px;
+    height: 48px;
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: flex-start;
+    gap: 48px;
+    list-style-type: none;
+}
+
+.footer__menu-link_active {
+    list-style-type: none;
+}
+
