--- a/styles/style.css
+++ b/styles/style.css
@@ -15,15 +15,17 @@
     list-style-type: circle;
     display: flex;
     gap: 25px;
+    font-family: Raleway ,sans-serif;
+    font-size: 18px;
+    font-weight: 400;
     width: 391.48px;
     height: 21.5px;
 }
 
 .header__logo-image {
     display: block;
-    width: 105px;
-    height: 148px;
-    display: block;
+    width: 135px;
+    height: 104px;
 }
 
 .header__links-list-item_no-bullit {
@@ -57,7 +59,6 @@
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
     background-size: auto 100%;
-    min-height: 757px;
     z-index: 1;
 }
 
@@ -319,9 +320,5 @@
     justify-content: flex-start;
     align-items: flex-start;
     gap: 48px;
-    list-style-type: none;
-}
-
-.footer__menu-link_active {
     list-style-type: none;
 }
