--- a/styles/style.css
+++ b/styles/style.css
@@ -8,24 +8,24 @@
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
-
 }
 
 .header__links-list {
     list-style-type: circle;
     display: flex;
-    gap: 25px;
+    gap: 33px;
     font-family: Raleway ,sans-serif;
     font-size: 18px;
     font-weight: 400;
     width: 391.48px;
     height: 21.5px;
+    text-underline-offset: 3px;
 }
 
 .header__logo-image {
     display: block;
     width: 135px;
-    height: 104px;
+    height: 105px;
 }
 
 .header__links-list-item_no-bullit {
@@ -50,8 +50,10 @@
     display: flex;
     flex-direction: column;
     justify-self:end;
+    gap: 5px;
     max-width: 240px;
     height: 98px;
+    text-underline-offset: 5px;
 }
 
 .cover { 
@@ -59,7 +61,9 @@
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
     background-size: auto 100%;
+    padding: 165px 50px 50px 50px;
     z-index: 1;
+    
 }
 
 .overlay {
@@ -73,8 +77,10 @@
 }
 
 .cover__title {
+    display: flex;
+    flex-direction: column;
+    gap: 18px;
     z-index: 1;
-    padding: 165px 50px 207px 50px;
     width: 100%;
     color: rgba(255, 255, 255, 1);
     font-family: Raleway, sans-serif;
@@ -82,6 +88,7 @@
     font-weight: 700;
     text-transform: uppercase;
     letter-spacing: 30px;
+    margin-bottom: 104px;
 }
 
 .aligned-text_left {
@@ -92,27 +99,30 @@
 .aligned-text_center {
     display: block;
     text-align: center;
+    margin-right: -30px;
 }
 
 .aligned-text_right {
     display: block;
-    text-align: end;
+    text-align: end;   
+    margin-right: -30px;
 }
 
 .cover__description {
     z-index: 1;
     display: flex;
     justify-content: space-between;
+    gap: 90px;
     align-items:center;
     color: rgba(255, 255, 255, 1);
     font-family: Raleway, sans-serif;
     font-size: 22px;
     text-transform: uppercase;
-    padding: 0px 50px 50px;
 }
 
 .cover__description-text {
-    word-spacing: 20px;
+    word-spacing: 18.5px;
+    width: 650px;
 }
 
 .bet-button {
@@ -140,6 +150,7 @@
     font-weight: 700;
     text-transform: uppercase;
     padding-left: 40px;
+    padding-bottom: 27px;
 }
 
 .lots__card-list {
@@ -214,10 +225,11 @@
 }
 
 .lots__look-more-link {
-
-    height: 25px;
+    font-family: Raleway, sans-serif;
+    font-size: 20px;
     padding-left: 40px;
-
+    padding-top: 30px;
+    text-underline-offset: 3px;
 }
 
 .about {
@@ -226,7 +238,7 @@
     gap: 25px;
     width: 1052px;
     height: 595px;
-    margin: 120px 24px 180px 24px;
+    margin: 155px 24px 145px 24px;
 }
 
 .column {
@@ -259,12 +271,13 @@
     letter-spacing: 0%;
     text-align: left;
     text-transform: uppercase;
-    margin: 100px 0px 100px 0px;
+    margin: 103px 0px 103px 0px;
 }
 
 .about__text {
     color: rgba(0, 0, 0, 1);
     font-family: Raleway, sans-serif;
+    width: 689px;
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
@@ -275,12 +288,16 @@
     gap: 24px;
 }
 
+.about__text-second {
+    width: 688px;
+    height: 168px;
+}
+
 .footer {
     width: 1100px;
     height: 180px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 160px;
+    grid-template-columns: repeat(3, 1fr);  
     padding-left: 50px;
     padding-right: 50px;
 }
@@ -293,19 +310,23 @@
     font-style: normal;
     display: flex;
     flex-direction: column;
+    gap: 4px;
     justify-self:start;
+    text-underline-offset: 3px;
 }
 
 .footer__menu-list {
-    width: 164x;
+    width: 150px;
     height: 64px;
+    margin-left: 105px;
 }
 
 .footer__menu-list-item {
     font-family: Raleway, sans-serif;
     font-size: 18px;
-    text-align: center;
     list-style-type: none;
+    text-align: center;
+    text-underline-offset: 3px;
 }
 
 .footer__menu-link_active {
@@ -313,6 +334,7 @@
 }
 
 .footer__social-list {
+    margin-left: 120px;
     width: 240px;
     height: 48px;
     display: flex;
