--- a/styles/style.css
+++ b/styles/style.css
@@ -2,9 +2,12 @@
     margin: 0;
 }
 
+.header__links-list-item.link_active {
+    text-decoration: none;
+}
+
 .header {
     width: 1100px;
-    height: 293px;
     display: grid;
     grid-template-columns: 1fr min-content 1fr;
     align-items: center;
@@ -18,7 +21,6 @@
     font-size: 18px;
     font-weight: 400;
     width: 391.48px;
-    height: 21.5px;
     text-underline-offset: 3px;
 }
 
@@ -28,9 +30,6 @@
     height: 105px;
 }
 
-.header__links-list-item_no-bullit {
-    list-style-type: none;
-}
 
 .header__menu {
     margin-left: 50px;
@@ -52,7 +51,6 @@
     justify-self:end;
     gap: 5px;
     max-width: 240px;
-    height: 98px;
     text-underline-offset: 5px;
 }
 
@@ -60,7 +58,8 @@
     position: relative;
     background-image: url(../images/cover.jpg);
     background-repeat: no-repeat;
-    background-size: auto 100%;
+    background-position: center;
+    background-size: cover;
     padding: 165px 50px 50px 50px;
     z-index: 1;
     
@@ -139,7 +138,6 @@
     display: flex;
     flex-wrap: wrap;
     width: 1052px;
-    min-height: 723px;
     margin: 180px 24px 120px 24px;
 }
 
@@ -155,16 +153,20 @@
 
 .lots__card-list {
     display: flex;
+    flex-wrap: wrap;
     gap: 25px;
     list-style-type: none;
 }
 
 .card {
+    width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 334px;
-    height: 596px
+    background-position: center;
+    background-size: cover;
+    z-index: 0;
 }
 
 .card__title {
@@ -173,7 +175,6 @@
     font-size: 22px;
     font-weight: 700;
     line-height: 26px;
-    letter-spacing: 0%;
     text-align: left;
     text-decoration-line: underline;
     text-transform: uppercase;
@@ -187,7 +188,6 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 120%;
-    letter-spacing: 0%;
     text-decoration: none;
     margin: auto 40px 48px;
 }
@@ -197,31 +197,22 @@
     text-decoration: none;
 }
 
-.lots__card-list-item-cinema {
-    width: 334px;
-    height: 596px;
+.card.lots__card-list-item-cinema {
     background-image: url(../images/card-lot-01.jpg);
-    background-position: center;
-    background-size: cover;
-    z-index: 0;
+    width: 334px;
+    min-height: 596px;
 }
 
-.lots__card-list-item-book {
-    width: 334px;
-    height: 596px;
+.card.lots__card-list-item-book {
     background-image: url(../images/card-lot-02.jpg);
-    background-position: center;
-    background-size: cover;
-    z-index: 0;
+    width: 334px;
+    min-height: 596px;
 }
 
-.lots__card-list-item_art {
-    width: 334px;
-    height: 596px;
+.card.lots__card-list-item_art {
     background-image: url(../images/card-lot-03.jpg);
-    background-position: center;
-    background-size: cover;
-    z-index: 0;
+    width: 334px;
+    min-height: 596px;
 }
 
 .lots__look-more-link {
@@ -237,8 +228,7 @@
     grid-template-columns: 334px 1fr;
     gap: 25px;
     width: 1052px;
-    height: 595px;
-    margin: 155px 24px 145px 24px;
+    margin: 160px 24px 180px 24px;
 }
 
 .column {
@@ -268,7 +258,6 @@
     font-size: 40px;
     font-weight: 700;
     line-height: 100%;
-    letter-spacing: 0%;
     text-align: left;
     text-transform: uppercase;
     margin: 103px 0px 103px 0px;
@@ -281,21 +270,14 @@
     font-size: 20px;
     font-weight: 400;
     line-height: 24px;
-    letter-spacing: 0%;
     text-align: left;
     display: flex;
     flex-direction: column;
     gap: 24px;
 }
 
-.about__text-second {
-    width: 688px;
-    height: 168px;
-}
-
 .footer {
     width: 1100px;
-    height: 180px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     padding-left: 50px;
@@ -304,7 +286,6 @@
 
 .address__footer {
     width: 265px;
-    height: 98px;
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
@@ -321,6 +302,10 @@
     margin-left: 105px;
 }
 
+.footer__menu-link.link_active{
+    text-decoration: none;
+}
+
 .footer__menu-list-item {
     font-family: Raleway, sans-serif;
     font-size: 18px;
@@ -329,14 +314,9 @@
     text-underline-offset: 3px;
 }
 
-.footer__menu-link_active {
-    text-decoration: none;
-}
-
 .footer__social-list {
     margin-left: 120px;
     width: 240px;
-    height: 48px;
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
