--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,11 @@
     margin: 0;
 }
 
-.header__links-list-item.link_active {
+.no_built {
+    list-style-type: none;
+}
+
+.link_active {
     text-decoration: none;
 }
 
@@ -45,13 +49,16 @@
     font-family: Raleway, sans-serif;
     font-size: 18px;
     font-style: normal;
-    margin: 95px 50px 100px;
-    display: flex;
-    flex-direction: column;
-    justify-self:end;
-    gap: 5px;
     max-width: 240px;
     text-underline-offset: 5px;
+}
+
+.header__address {
+    display: flex;
+    flex-direction: column;
+    margin: 95px 50px 100px;
+    justify-self:end;
+    gap: 5px;
 }
 
 .cover {
@@ -136,7 +143,7 @@
 
 .lots {
     display: flex;
-    flex-wrap: wrap;
+    flex-direction: column;
     width: 1052px;
     margin: 180px 24px 120px 24px;
 }
@@ -159,8 +166,8 @@
 }
 
 .card {
-    width: 100%;
-    height: 100%;
+    width: 334px;
+    min-height: 596px;
     display: flex;
     flex-direction: column;
     position: relative;
@@ -199,20 +206,15 @@
 
 .card.lots__card-list-item-cinema {
     background-image: url(../images/card-lot-01.jpg);
-    width: 334px;
-    min-height: 596px;
+
 }
 
 .card.lots__card-list-item-book {
     background-image: url(../images/card-lot-02.jpg);
-    width: 334px;
-    min-height: 596px;
 }
 
 .card.lots__card-list-item_art {
     background-image: url(../images/card-lot-03.jpg);
-    width: 334px;
-    min-height: 596px;
 }
 
 .lots__look-more-link {
@@ -282,28 +284,21 @@
     grid-template-columns: repeat(3, 1fr);
     padding-left: 50px;
     padding-right: 50px;
+    padding-bottom: 80px;
 }
 
 .address__footer {
-    width: 265px;
-    font-family: Raleway, sans-serif;
-    font-size: 18px;
-    font-style: normal;
     display: flex;
     flex-direction: column;
     gap: 4px;
     justify-self:start;
     text-underline-offset: 3px;
+    max-width: 250px;
 }
 
-.footer__menu-list {
+.footer__menu {
     width: 150px;
-    height: 64px;
     margin-left: 105px;
-}
-
-.footer__menu-link.link_active {
-    text-decoration: none;
 }
 
 .footer__menu-list-item {
